--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -4,6 +4,7 @@
  * Do not modify these two selectors, please
  */
 html {
+  margin: 0;
   box-sizing: border-box;
 }
 *, *:before, *:after {
@@ -15,6 +16,8 @@ html {
  */
 
 body {
+  display: flex;
+  justify-content: center;
   margin: 0;
   color: #244751;
   background-color: #eee;
@@ -24,3 +27,10 @@ body {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+main.container {
+  position: relative;
+    top: 80px;
+  width: 450px;
+  background-color: white;
+}
