fixed position of .header in nav-bar

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -28,7 +28,7 @@ body {
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
 
-main.container {
+main {
   position: relative;
     top: 80px;
   width: 450px;
