--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -22,8 +22,7 @@ nav#nav-bar {
 }
 
 #nav-bar .header {
-  position: relative;
-    top: 25%;
+  margin-top: 30px;
   font-size: 2rem;
   float: left;
 }
