changes counter color to .red when < 1

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -28,6 +28,16 @@ section.new-tweet form span {
   font-size: smaller;
 }
 
+/* toggleClass */
+
+.yellow {
+  color: yellow;
+}
+
+.orange {
+  color: #ff7b00;
+}
+
 .red {
   color: red;
 }
