--- a/public/styles/published-tweets.css
+++ b/public/styles/published-tweets.css
@@ -1,6 +1,6 @@
 article.each-tweet {
   opacity: 0.75;
-  border: 2px solid lightgray;
+  border: 1px solid lightgray;
   border-radius: 5px;
   margin: 2em;
   background-color: #eee;
@@ -8,7 +8,7 @@ article.each-tweet {
 
 article.each-tweet:hover {
   opacity: 1;
-  border: 2px solid #acacac;
+  border: 1px solid #acacac;
 
 }
 
@@ -56,6 +56,7 @@ article.each-tweet:hover {
 .each-tweet footer {
   overflow: hidden;
   background-color: white;
+  border-radius: 0 0 5px 5px;
 }
 
 p.time-stamp {
