fixes methods to update #counter in composer-char-counter.js

--- a/public/styles/published-tweets.css
+++ b/public/styles/published-tweets.css
@@ -2,7 +2,7 @@ article.each-tweet {
   opacity: 0.75;
   border: 1px solid lightgray;
   border-radius: 5px;
-  margin: 2em;
+  margin: 1em 2em;
   background-color: #eee;
 }
 
