--- a/public/styles/compose-tweet.css
+++ b/public/styles/compose-tweet.css
@@ -42,6 +42,7 @@ section#compose-tweet form input {
 /* -- Errors -- */
 
 .error {
+  height: 64px;
   border: 3px outset #d80e0e;
   border-radius: 5px;
   padding: 10px;
