--- a/public/styles/published-tweets.css
+++ b/public/styles/published-tweets.css
@@ -4,6 +4,7 @@ article.each-tweet {
   border-radius: 5px;
   margin: 1em 2em;
   background-color: #eee;
+  transition: 0.3s;
 }
 
 article.each-tweet:hover {
