--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -7,6 +7,7 @@
 html {
   margin: 0;
   box-sizing: border-box;
+  font-size: 1em;
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -25,10 +26,6 @@ body {
   font-family: 'Roboto Condensed', sans-serif;
 }
 
-/*
- * Additional CSS can be defined below or in other CSS files, as per instructions
- */
-
 main.container {
   display: flex;
   flex-direction: column;
@@ -40,3 +37,9 @@ main.container {
   box-shadow: 0 0 10px #c4c4c4;
 }
 
+@media (max-width: 450px) {
+  html {
+    font-size: 0.8em;
+  }
+
+}
